--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,7 +20,7 @@
 
 
   <h4 class="mt-5 mb-3">Edit Shop Details</h4>
-  <wea5-shopform (shopUpdated)="updateShop()" [shop]="shop"></wea5-shopform>
+  <wea5-shopform></wea5-shopform>
 
 </div>
 
