statistics input added

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -32,7 +32,7 @@
           <a class="nav-link" href="#">Products</a>
         </li>
         <li class="nav-item">
-          <a routerLink="/cartstatistics" class="nav-link" href="#">Statistics</a>
+          <a routerLink="/orderstatistics" class="nav-link" href="#">Statistics</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Projects</a>
