--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -32,10 +32,16 @@
           <a class="nav-link" href="#">Products</a>
         </li>
         <li class="nav-item">
-          <a routerLink="/orderstatistics" class="nav-link" href="#">Statistics</a>
+          <a class="nav-link" href="#">Coupons</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Projects</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Statistics
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a routerLink="/orderstatistics" class="dropdown-item" href="#">Order statistic</a></li>
+            <li><a routerLink="/cartstatistics" class="dropdown-item" href="#">Cart statistic</a></li>
+          </ul>
         </li>
       </ul>
       <!-- Left links -->
