--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -34,6 +34,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Coupons</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Discounts</a>
+        </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Statistics
