--- a/src/app/discount-list/discount-list.component.html
+++ b/src/app/discount-list/discount-list.component.html
@@ -1,8 +1,16 @@
 <wea5-navbar></wea5-navbar>
 
 <div class="bg-white rounded-3 p-3">
+
+  <div class="row mb-2">
+    <div class="col" style="text-align:end;">
+      <button [routerLink]="emptyGuid" class="btn-primary btn" style="background-color: #093D65; border-color: #053659">Add new Discount Setting</button>
+    </div>
+  </div>
+
+
   <table class="table table-responsive">
-    <thead class="table-dark" style="background: #373b3e;">
+    <thead>
     <tr style="line-height: 50px;">
       <th scope="col">Name</th>
       <th scope="col">Rule</th>
@@ -29,7 +37,7 @@
             <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"></path>
           </svg>
         </button>
-        <button type="button" class="btn btn-secondary">
+        <button [routerLink]="item.id" type="button" class="btn btn-secondary">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
             <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"></path>
           </svg>
@@ -38,4 +46,7 @@
     </tr>
     </tbody>
   </table>
+
 </div>
+
+
