--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -35,7 +35,7 @@
           <a class="nav-link" href="#">Coupons</a>
         </li>
         <li class="nav-item">
-          <a routerLink="/discountlist" class="nav-link" href="#">Discounts</a>
+          <a routerLink="/discounts" class="nav-link" href="#">Discounts</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
