product form added

--- a/src/app/discount-list/discount-list.component.html
+++ b/src/app/discount-list/discount-list.component.html
@@ -3,7 +3,7 @@
 <div class="bg-white rounded-3 p-3">
 
   <div class="row mb-2">
-    <div class="col" style="text-align:end;">
+    <div class="col">
       <button [routerLink]="emptyGuid" class="btn-primary btn" style="background-color: #093D65; border-color: #053659">Add new Discount Setting</button>
     </div>
   </div>
