--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,52 +1,71 @@
 <wea5-navbar></wea5-navbar>
-<wea5-search (searchTriggered)="searchTriggered($event)"></wea5-search>
 
-<div class="row justify-content-center">
-  <div >
-    <table class="table table-striped bg-body table-responsive mt-3 rounded-2" *ngIf="pagedResult != undefined" >
-      <thead>
-      </thead>
-      <tbody>
-      <tr class="" *ngFor="let item of pagedResult.items">
-        <th class="w-25">
-          <img src="https://picsum.photos/100?t" alt="placeholder image">
-        </th>
-        <td class="w-25">
-          <div>
-            <a [routerLink]="item.id" target="_blank" class="text-navy">
-              {{item.name}}
-            </a>
-          </div>
-          <div>
-            <h4>
-              {{item.price}}
-            </h4>
-          </div>
-        </td>
-        <td class="w-25">
-          <div>
-            <button class="btn btn-primary"><i class="fa fa fa-shopping-cart"></i> Add to Cart</button>
-          </div>
-        </td>
-      </tr>
-      </tbody>
-    </table>
+<div class="bg-white rounded-3 p-3">
+
+  <div class="row mb-2">
+    <div class="col">
+      <wea5-search (searchTriggered)="searchTriggered($event)"></wea5-search>
+    </div>
+    <div class="col" align="right">
+      <button [routerLink]="emptyGuid" class="btn-primary btn" style="background-color: #093D65; border-color: #053659">Add new Product</button>
+    </div>
   </div>
+
+  <div class="row justify-content-center">
+    <div >
+      <table class="table table-striped bg-body table-responsive mt-3 rounded-2" *ngIf="pagedResult != undefined" >
+        <thead>
+        </thead>
+        <tbody>
+        <tr class="" *ngFor="let item of pagedResult.items">
+          <th class="w-25">
+            <img src="https://picsum.photos/100?t" alt="placeholder image">
+          </th>
+          <td class="w-25">
+            <div>
+              <p style="color: #093D65; font-weight: bolder">{{item.name}}</p>
+            </div>
+            <div>
+              <h4>
+                {{item.price}}
+              </h4>
+            </div>
+          </td>
+          <td class="w-25">
+
+            <button type="button" class="btn btn-secondary m-2" (click)="delete(item.id)">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"></path>
+              </svg>
+            </button>
+
+            <button [routerLink]="item.id" type="button" class="btn btn-secondary m-2">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-fill" viewBox="0 0 16 16">
+                <path d="M12.854.146a.5.5 0 0 0-.707 0L10.5 1.793 14.207 5.5l1.647-1.646a.5.5 0 0 0 0-.708l-3-3zm.646 6.061L9.793 2.5 3.293 9H3.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.207l6.5-6.5zm-7.468 7.468A.5.5 0 0 1 6 13.5V13h-.5a.5.5 0 0 1-.5-.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.5-.5V10h-.5a.499.499 0 0 1-.175-.032l-.179.178a.5.5 0 0 0-.11.168l-2 5a.5.5 0 0 0 .65.65l5-2a.5.5 0 0 0 .168-.11l.178-.178z"></path>
+              </svg>
+            </button>
+
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+
+  <nav>
+    <ul class="pagination">
+      <li class="page-item" [ngClass]="{
+          disabled: disablePrevious
+          }">
+        <button (click)="navigateToPreviousPage()" class="page-link " >Previous</button>
+      </li>
+      <li class="page-item"><a class="page-link">{{currentPage}}/{{pagedResult.totalPages}}</a></li>
+      <li class="page-item" [ngClass]="{
+          disabled: disableNext
+          }">
+        <button (click)="navigateToNextPage()" class="page-link">Next</button>
+      </li>
+    </ul>
+  </nav>
 </div>
-
-
-<nav>
-  <ul class="pagination">
-    <li class="page-item" [ngClass]="{
-        disabled: disablePrevious
-        }">
-      <button (click)="navigateToPreviousPage()" class="page-link " >Previous</button>
-    </li>
-    <li class="page-item"><a class="page-link">{{currentPage}}/{{pagedResult.totalPages}}</a></li>
-    <li class="page-item" [ngClass]="{
-        disabled: disableNext
-        }">
-      <button (click)="navigateToNextPage()" class="page-link">Next</button>
-    </li>
-  </ul>
-</nav>
