--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,11 +1,11 @@
 
-<form class="col-12 col-lg-auto mb-5 mb-lg-0 w-50" role="search">
+<form class="col-12 col-lg-auto mb-5 mb-lg-0" role="search">
   <div class="row">
     <div class="col">
       <input #searchTerm class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
     </div>
     <div class="col">
-      <button (click)="searchTriggered.emit(searchTerm.value)" class="btn btn-primary" type="submit">Search</button>
+      <button (click)="searchTriggered.emit(searchTerm.value)" class="btn btn-primary" style="background-color: #093D65; border-color: #053659" type="submit">Search</button>
     </div>
   </div>
 </form>
